--- a/summary/index.html
+++ b/summary/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="logo.png"/>
     <title>问卷数据汇总</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/jasondavies/d3-cloud/build/d3.layout.cloud.js"></script>
@@ -172,8 +172,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/dataManager.js"></script>
-    <script src="js/summary.js"></script>
+    <script src="dataManager.js"></script>
+    <script src="summary.js"></script>
     <script>
     // 添加一个测试按钮，用于手动检查数据加载
     document.addEventListener('DOMContentLoaded', function() {
